--- a/src/shared/config/styles/globals.scss
+++ b/src/shared/config/styles/globals.scss
@@ -1,16 +1,16 @@
-@import "./variables.module";
+@import './variables.module';
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   font-size: $font-size;
   font-family: $font-family;
   overflow-x: hidden;
 }
-
-
-
