--- a/src/widgets/game/canvas/index.module.scss
+++ b/src/widgets/game/canvas/index.module.scss
@@ -1,7 +1,12 @@
 @import 'src/shared/config/styles/variables.module';
 
-.gameContainer {
+canvas {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+
   width: 100%;
-  height: 100%;
+  height: calc(100vh - 5px);
   background-color: $background-color;
 }
