--- a/src/pages/game/index.module.scss
+++ b/src/pages/game/index.module.scss
@@ -1,7 +1,14 @@
 @import 'src/shared/config/styles/variables.module';
 
 .gameContainer {
-  width: 100%;
-  height: 100%;
-  background-color: $background-color;
+  margin-top: 5vh;
+
+  display: flex;
+  justify-content: center;
+}
+
+.gameController{
+  display: flex;
+  justify-content: space-around;
+  align-content: center;
 }
