Add modal for changing particles color

--- a/src/pages/game/index.scss
+++ b/src/pages/game/index.scss
@@ -7,8 +7,12 @@
   justify-content: center;
 }
 
-.gameController{
+.gameController {
   display: flex;
   justify-content: space-around;
   align-content: center;
+}
+
+.click-info {
+  text-align: center;
 }
