--- a/src/shared/config/styles/variables.module.scss
+++ b/src/shared/config/styles/variables.module.scss
@@ -3,6 +3,7 @@ $font-family: 'Arial', sans-serif;
 $font-size: 16px;
 
 // Colors
-$primary-color: #b4d9f8;
+$primary-color: #ffffff;
 $secondary-color: #2697f6;
 $background-color: #242424;
+$background-light-color: #ffffff;
