--- a/src/pages/game/index.scss
+++ b/src/pages/game/index.scss
@@ -1,7 +1,11 @@
 @import 'src/shared/config/styles/variables.module';
 
+.alignCenter {
+  text-align: center;
+}
+
 .gameContainer {
-  margin-top: 5vh;
+  margin-top: 2vh;
 
   display: flex;
   justify-content: center;
@@ -13,6 +17,3 @@
   align-content: center;
 }
 
-.click-info {
-  text-align: center;
-}
