Implement memoization and minor adjustments, used prettier

--- a/src/widgets/canvas/Canvas.scss
+++ b/src/widgets/canvas/Canvas.scss
@@ -1,4 +1,4 @@
-@import 'src/shared/config/styles/variables.module';
+@import '../../shared/config/styles/variables.module';
 
 canvas {
   background-color: $background-color;
